clang-ir/tests/snapshots/snapshot_fixtures__fixtures__snprintf_buffer_return_value.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/snprintf_buffer_return_value.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[6] = ConstArray { ty: Array { element_type: Named("s8i"), size: 6 }, elts: Str("%d-%d"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[13] = ConstArray { ty: Array { element_type: Named("s8i"), size: 13 }, elts: Str("n=%d buf=%s\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn snprintf(%arg0: s8i*, %arg1: u64i, %arg2: s8i*, ...) -> s32i [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s8i[64], "buf", align 16
        %2 = alloca s32i, "n", align 4
        %3 = const 0 : s32i
        store %3, %0
        %4 = get_global @snprintf : (s8i*, u64i, s8i*, ...) -> s32i*
        %5 = cast(array_to_ptrdecay) %1 : s8i*
        %6 = const 64 : u64i
        %7 = get_global @.str : s8i[6]*
        %8 = cast(array_to_ptrdecay) %7 : s8i*
        %9 = const 3 : s32i
        %10 = const 4 : s32i
        %11 = call @snprintf(%5, %6, %8, %9, %10) : s32i [all]
        store %11, %2, align 4
        %12 = get_global @printf : (s8i*, ...) -> s32i*
        %13 = get_global @.str.1 : s8i[13]*
        %14 = cast(array_to_ptrdecay) %13 : s8i*
        %15 = load %2 : s32i, align 4
        %16 = cast(array_to_ptrdecay) %1 : s8i*
        %17 = call @printf(%14, %15, %16) : s32i [all]
        %18 = const 0 : s32i
        store %18, %0
        %19 = load %0 : s32i
        return %19
}
