clang-ir/tests/snapshots/snapshot_fixtures__fixtures__sprintf_buffer_mutated_no_rewrite.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/sprintf_buffer_mutated_no_rewrite.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[6] = "%d-%d" [cir_private, default, align 1, dso_local, constant]

fn sprintf(%arg0: s8i*, %arg1: s8i*, ...) -> s32i [external, c, nothrow];
fn puts(%arg0: s8i*) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i[64], "buf", align 16
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @sprintf : ((s8i*, s8i*, ...) -> s32i)*
    %4 = cast(array_to_ptrdecay) %1 : s8i*
    %5 = get_global @.str : s8i[6]*
    %6 = cast(array_to_ptrdecay) %5 : s8i*
    %7 = const 3 : s32i
    %8 = const 4 : s32i
    %9 = call @sprintf(%4, %6, %7, %8) : s32i [all]
    %10 = const 88 : s8i
    %11 = const 0 : s64i
    %12 = get_element %1[%11] : s8i*
    store %10, %12, align 16
    %13 = cast(array_to_ptrdecay) %1 : s8i*
    %14 = call @puts(%13) : s32i [all]
    %15 = const 0 : s32i
    store %15, %0
    %16 = load %0 : s32i
    return %16
}
