clang-ir/tests/snapshots/snapshot_fixtures__fixtures__sprintf_nonconst_format_no_rewrite.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/sprintf_nonconst_format_no_rewrite.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[6] = ConstArray { ty: Array { element_type: Named("s8i"), size: 6 }, elts: Str("%d-%d"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn sprintf(%arg0: s8i*, %arg1: s8i*, ...) -> s32i [external, c, nothrow];
fn puts(%arg0: s8i*) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s8i[64], "buf", align 16
        %2 = alloca s8i*, "fmt", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = get_global @.str : s8i[6]*
        %5 = cast(array_to_ptrdecay) %4 : s8i*
        store %5, %2, align 8
        %6 = get_global @sprintf : (s8i*, s8i*, ...) -> s32i*
        %7 = cast(array_to_ptrdecay) %1 : s8i*
        %8 = load %2 : s8i*, align 8
        %9 = const 3 : s32i
        %10 = const 4 : s32i
        %11 = call @sprintf(%7, %8, %9, %10) : s32i [all]
        %12 = cast(array_to_ptrdecay) %1 : s8i*
        %13 = call @puts(%12) : s32i [all]
        %14 = const 0 : s32i
        store %14, %0
        %15 = load %0 : s32i
        return %15
}
