clang-ir/tests/snapshots/snapshot_fixtures__fixtures__sprintf_overflow_risk_no_rewrite.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/sprintf_overflow_risk_no_rewrite.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[3] = ConstArray { ty: Array { element_type: Named("s8i"), size: 3 }, elts: Str("%d"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn sprintf(%arg0: s8i*, %arg1: s8i*, ...) -> s32i [external, c, nothrow];
fn puts(%arg0: s8i*) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s8i[4], "buf", align 1
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @sprintf : (s8i*, s8i*, ...) -> s32i*
        %4 = cast(array_to_ptrdecay) %1 : s8i*
        %5 = get_global @.str : s8i[3]*
        %6 = cast(array_to_ptrdecay) %5 : s8i*
        %7 = const 7 : s32i
        %8 = call @sprintf(%4, %6, %7) : s32i [all]
        %9 = cast(array_to_ptrdecay) %1 : s8i*
        %10 = call @puts(%9) : s32i [all]
        %11 = const 0 : s32i
        store %11, %0
        %12 = load %0 : s32i
        return %12
}
