clang-ir/tests/snapshots/snapshot_fixtures__fixtures__stat_mtime_member.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/stat_mtime_member.c" (c, x86_64-unknown-linux-gnu)
global __const.main.info : rec_stat = Zero { ty: Named("rec_stat") } [cir_private, default, dso_local, constant]
global .str : s8i[10] = ConstArray { ty: Array { element_type: Named("s8i"), size: 10 }, elts: Str("/dev/null"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[6] = ConstArray { ty: Array { element_type: Named("s8i"), size: 6 }, elts: Str("%lld\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn stat(%arg0: s8i*, %arg1: rec_stat*) -> s32i [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_stat, "info", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @__const.main.info : rec_stat*
        copy
        scope {
                %12 = get_global @.str : s8i[10]*
                %13 = cast(array_to_ptrdecay) %12 : s8i*
                %14 = call @stat(%13, %1) : s32i [all]
                %15 = const 0 : s32i
                cmp
                if %16 {
                        %17 = const 1 : s32i
                        store %17, %0
                        %18 = load %0 : s32i
                        return %18
                }
                yield
        }
        %4 = get_global @printf : (s8i*, ...) -> s32i*
        %5 = get_global @.str.1 : s8i[6]*
        %6 = cast(array_to_ptrdecay) %5 : s8i*
        get_member
        get_member
        %9 = load %8 : s64i, align 8
        %10 = call @printf(%6, %9) : s32i [all]
        %11 = load %0 : s32i
        return %11
}
