clang-ir/tests/snapshots/snapshot_fixtures__fixtures__stat_struct.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/stat_struct.c" (c, x86_64-unknown-linux-gnu)
global __const.main.info : rec_stat = Zero { ty: Named("rec_stat") } [cir_private, default, dso_local, constant]
global .str : s8i[10] = ConstArray { ty: Array { element_type: Named("s8i"), size: 10 }, elts: Str("/dev/null"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[9] = ConstArray { ty: Array { element_type: Named("s8i"), size: 9 }, elts: Str("%d %lld\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn stat(%arg0: s8i*, %arg1: rec_stat*) -> s32i [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_stat, "info", align 8
        %2 = alloca s32i, "result", align 4
        %3 = const 0 : s32i
        store %3, %0
        %4 = get_global @__const.main.info : rec_stat*
        copy
        %5 = get_global @.str : s8i[10]*
        %6 = cast(array_to_ptrdecay) %5 : s8i*
        %7 = call @stat(%6, %1) : s32i [all]
        store %7, %2, align 4
        %8 = get_global @printf : (s8i*, ...) -> s32i*
        %9 = get_global @.str.1 : s8i[9]*
        %10 = cast(array_to_ptrdecay) %9 : s8i*
        %11 = load %2 : s32i, align 4
        get_member
        %13 = load %12 : s64i, align 8
        %14 = call @printf(%10, %11, %13) : s32i [all]
        %15 = const 0 : s32i
        store %15, %0
        %16 = load %0 : s32i
        return %16
}
