clang-ir/tests/snapshots/snapshot_fixtures__fixtures__stdio_file_close_before_remove.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/stdio_file_close_before_remove.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[36] = ConstArray { ty: Array { element_type: Named("s8i"), size: 36 }, elts: Str("slate_stdio_close_before_remove.tmp"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[2] = ConstArray { ty: Array { element_type: Named("s8i"), size: 2 }, elts: Str("w"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[10] = ConstArray { ty: Array { element_type: Named("s8i"), size: 10 }, elts: Str("open-fail"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[7] = ConstArray { ty: Array { element_type: Named("s8i"), size: 7 }, elts: Str("owned\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[5] = ConstArray { ty: Array { element_type: Named("s8i"), size: 5 }, elts: Str("done"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn fopen(%arg0: s8i*, %arg1: s8i*) -> rec__IO_FILE* [external, c];
fn puts(%arg0: s8i*) -> s32i [external, c];
fn fputs(%arg0: s8i*, %arg1: rec__IO_FILE*) -> s32i [external, c];
fn fclose(%arg0: rec__IO_FILE*) -> s32i [external, c];
fn remove(%arg0: s8i*) -> s32i [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec__IO_FILE*, "f", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @fopen : (s8i*, s8i*) -> rec__IO_FILE**
        %4 = get_global @.str : s8i[36]*
        %5 = cast(array_to_ptrdecay) %4 : s8i*
        %6 = get_global @.str.1 : s8i[2]*
        %7 = cast(array_to_ptrdecay) %6 : s8i*
        %8 = call @fopen(%5, %7) : rec__IO_FILE* [all]
        store %8, %1, align 8
        scope {
                %23 = load %1 : rec__IO_FILE*, align 8
                %24 = cast(ptr_to_bool) %23 : bool
                not
                if %25 {
                        %26 = get_global @.str.2 : s8i[10]*
                        %27 = cast(array_to_ptrdecay) %26 : s8i*
                        %28 = call @puts(%27) : s32i [all]
                        %29 = const 0 : s32i
                        store %29, %0
                        %30 = load %0 : s32i
                        return %30
                }
                yield
        }
        %9 = get_global @.str.3 : s8i[7]*
        %10 = cast(array_to_ptrdecay) %9 : s8i*
        %11 = load %1 : rec__IO_FILE*, align 8
        %12 = call @fputs(%10, %11) : s32i [all]
        %13 = load %1 : rec__IO_FILE*, align 8
        %14 = call @fclose(%13) : s32i [all]
        %15 = get_global @.str : s8i[36]*
        %16 = cast(array_to_ptrdecay) %15 : s8i*
        %17 = call @remove(%16) : s32i [all]
        %18 = get_global @.str.4 : s8i[5]*
        %19 = cast(array_to_ptrdecay) %18 : s8i*
        %20 = call @puts(%19) : s32i [all]
        %21 = const 0 : s32i
        store %21, %0
        %22 = load %0 : s32i
        return %22
}
